--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             <a href="publication.html" class="nav-link">Publications</a>
           </li>
           <li class="nav-item">
-            <a href="publication.html" class="nav-link">Gallery</a>
+            <a href="gallery.html" class="nav-link">Gallery</a>
           </li>
           <li class="nav-item">
-            <a href="publication.html" class="nav-link">Cloud</a>
+            <a href="http://10.33.1.110/nextcloud" class="nav-link">Cloud</a>
           </li>
         </ul>
       </div>
