--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
           <li data-bs-target="#recenthl" data-bs-slide-to="0" class="active"></li>
           <li data-bs-target="#recenthl" data-bs-slide-to="1"></li>
           <li data-bs-target="#recenthl" data-bs-slide-to="2"></li>
+          <li data-bs-target="#recenthl" data-bs-slide-to="3"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -99,6 +100,9 @@
           </div>
           <div class="carousel-item">
             <img src="recents/fig3.png" class="d-block w-100" alt="Third Slide" />
+          </div>
+          <div class="carousel-item">
+            <img src="recents/fig4.png" class="d-block w-100" alt="Fourth Slide" />
           </div>
         </div>
         <a class="carousel-control-prev" href="#recenthl" role="button" data-bs-slide="prev">
