--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
         Atomic, Molecular & Quantum Information Group
       </div>
       <p class="text-center text-light">
+        Department of Physics
+        Indian Institute of Technology Kharagpur
         Welcome to the website of our theoretical group!
       </p>
     </div>
@@ -93,16 +95,16 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="recents/fig1.png" class="d-block img-fluid w-100" alt="First Slide" />
+            <img src="recents/fig4.png" class="d-block img-fluid w-100" alt="First Slide" />
           </div>
           <div class="carousel-item">
-            <img src="recents/fig2.png" class="d-block w-100" alt="Second Slide" />
+            <img src="recents/fig1.png" class="d-block w-100" alt="Second Slide" />
           </div>
           <div class="carousel-item">
             <img src="recents/fig3.png" class="d-block w-100" alt="Third Slide" />
           </div>
           <div class="carousel-item">
-            <img src="recents/fig4.png" class="d-block w-100" alt="Fourth Slide" />
+            <img src="recents/fig2.png" class="d-block w-100" alt="Fourth Slide" />
           </div>
         </div>
         <a class="carousel-control-prev" href="#recenthl" role="button" data-bs-slide="prev">
