--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@
       </div>
       <p class="text-center text-light">
         Department of Physics
+      </p>
+      <p class="text-center text-light">
         Indian Institute of Technology Kharagpur
+      </p>
+      <p class="text-center text-light">
         Welcome to the website of our theoretical group!
       </p>
     </div>
