--- a/index.html
+++ b/index.html
@@ -76,11 +76,8 @@
       <div class="h1 text-white text-center">
         Atomic, Molecular & Quantum Information Group
       </div>
-      <p class="text-center text-light">
-        Department of Physics
-      </p>
-      <p class="text-center text-light">
-        Indian Institute of Technology Kharagpur
+      <p class="h3 text-center text-light">
+        Department of Physics, Indian Institute of Technology Kharagpur
       </p>
       <p class="text-center text-light">
         Welcome to the website of our theoretical group!
