--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-white">Ultracold Atom</h3>
-          <img src="https://picsum.photos/200" class="rounded-circle img-fluid w-25" alt="...">
+          <img src="recents/Physics.png/200" class="rounded-circle img-fluid w-25" alt="...">
           <p class="text-light p-2 topics-info mt-1">Bose-Einstein condensates (BEC), Dipolar BEC, Quantum Droplets and
             Supersolids,
             Multicomponent BEC, Spinor BEC, Instibility & Quantum Turbulence</p>
@@ -133,19 +133,19 @@
 
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-white">Quantum Foundations</h3>
-          <img src="https://picsum.photos/200" class="rounded-circle img-fluid w-25" alt="...">
+          <img src="recents/Physics.png/200" class="rounded-circle img-fluid w-25" alt="...">
           <p class="text-light p-2 topics-info mt-1">Nonlinear quantum theory, Quantum Ontology, Quantum Information,
             Quantum
             Thermodynamics</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-white">Atomic Physics</h3>
-          <img src="https://picsum.photos/200" class="rounded-circle img-fluid w-25" alt="...">
+          <img src="recents/Physics.png/200" class="rounded-circle img-fluid w-25" alt="...">
           <p class="text-light  p-2 topics-info">Relativistic Many-electron theory</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-white">Strongly Correlated and Topological Phases</h3>
-          <img src="https://picsum.photos/200" class="rounded-circle img-fluid w-25" alt="...">
+          <img src="recents/Physics.png/200" class="rounded-circle img-fluid w-25" alt="...">
           <p class="text-light p-2 topics-info mt-1">Topological phases of simple lattice models, Topological
             non-equillibrium dynamics, Non
             Hermitian PT-symmetry, First principal calculation in strongly
@@ -153,12 +153,12 @@
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-white">Quantum Algorithm</h3>
-          <img src="https://picsum.photos/200" class="rounded-circle img-fluid w-25" alt="...">
+          <img src="recents/Physics.png/200" class="rounded-circle img-fluid w-25" alt="...">
           <p class="text-light p-2 topics-info mt-1">Quantum Algorithm</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-white">High Energy & Astrophysics</h3>
-          <img src="https://picsum.photos/200" class="rounded-circle img-fluid w-25" alt="...">
+          <img src="recents/Physics.png/200" class="rounded-circle img-fluid w-25" alt="...">
           <p class="text-light p-2 topics-info mt-1">VHE Gamma-ray Astronomy, Gamma Ray burst (GRB) modeling, Neutrino
             oscillation, Deep
             learning techniques of event selection and reconstruction </p>
