--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <section class="p-5 bg-intro" id="intro">
     <div class="container">
-      <div class="h1 text-white text-center">
+      <div class="h1 text-light text-center">
         Atomic, Molecular & Quantum Information Group
       </div>
       <p class="h5 text-center text-light">
@@ -124,42 +124,42 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
-          <h3 class="text-white">Ultracold Atom</h3>
+          <h3 class="text-dark">Ultracold Atom</h3>
           <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="...">
-          <p class="text-light p-2 topics-info mt-1">Bose-Einstein condensates (BEC), Dipolar BEC, Quantum Droplets and
+          <p class="text-dark p-2 topics-info mt-1">Bose-Einstein condensates (BEC), Dipolar BEC, Quantum Droplets and
             Supersolids,
             Multicomponent BEC, Spinor BEC, Instibility & Quantum Turbulence</p>
         </div>
 
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
-          <h3 class="text-white">Quantum Foundations</h3>
+          <h3 class="text-dark">Quantum Foundations</h3>
           <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="...">
-          <p class="text-light p-2 topics-info mt-1">Nonlinear quantum theory, Quantum Ontology, Quantum Information,
+          <p class="text-dark p-2 topics-info mt-1">Nonlinear quantum theory, Quantum Ontology, Quantum Information,
             Quantum
             Thermodynamics</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
-          <h3 class="text-white">Atomic Physics</h3>
+          <h3 class="text-dark">Atomic Physics</h3>
           <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="...">
-          <p class="text-light  p-2 topics-info">Relativistic Many-electron theory</p>
+          <p class="text-dark  p-2 topics-info">Relativistic Many-electron theory</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
-          <h3 class="text-white">Strongly Correlated and Topological Phases</h3>
+          <h3 class="text-dark">Strongly Correlated and Topological Phases</h3>
           <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="...">
-          <p class="text-light p-2 topics-info mt-1">Topological phases of simple lattice models, Topological
+          <p class="text-dark p-2 topics-info mt-1">Topological phases of simple lattice models, Topological
             non-equillibrium dynamics, Non
             Hermitian PT-symmetry, First principal calculation in strongly
             correlated system, DFT</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
-          <h3 class="text-white">Quantum Algorithm</h3>
+          <h3 class="text-dark">Quantum Algorithm</h3>
           <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="...">
-          <p class="text-light p-2 topics-info mt-1">Quantum Algorithm</p>
+          <p class="text-dark p-2 topics-info mt-1">Quantum Algorithm</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
-          <h3 class="text-white">High Energy & Astrophysics</h3>
+          <h3 class="text-dark">High Energy & Astrophysics</h3>
           <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="...">
-          <p class="text-light p-2 topics-info mt-1">VHE Gamma-ray Astronomy, Gamma Ray burst (GRB) modeling, Neutrino
+          <p class="text-dark p-2 topics-info mt-1">VHE Gamma-ray Astronomy, Gamma Ray burst (GRB) modeling, Neutrino
             oscillation, Deep
             learning techniques of event selection and reconstruction </p>
         </div>
@@ -169,7 +169,7 @@
 
 
 
-  <footer class="bg-dark text-white pt-2">
+  <footer class="bg-dark text-light pt-2">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
