--- a/group.html
+++ b/group.html
@@ -63,7 +63,7 @@
     </nav>
 
     <section class="p-5 text-center text-sm-start bg-present" id="groupHead">
-        <div class="h1 text-center text-light p-3">Group Head</div>
+        <div class="h1 text-center text-dark p-3">Group Head</div>
         <div class="container">
             <div class="row justify-content-center align-self-center">
                 <div class="col-lg-4 col-sm">
@@ -71,9 +71,8 @@
                 </div>
                 <div class="col-lg-4 col-sm align-self-center">
                     <div class="text-center">
-                        <h4 class="text-light">Sonjoy Majumder</h4>
-                        <p style="color:rgb(173, 183, 187)">Professor, Physics</p>
-                        <p style="color:rgb(236, 205, 236)">Cold Atom</p>
+                        <h4 class="text-dark">Sonjoy Majumder</h4>
+                        <p style="color:rgb(137, 137, 137)">Professor, Physics</p>
                         <tt class="text-lg" style="color:rgb(167, 167, 167)">sonjoym@phy.iitkgp.ac.in</tt>
                     </div>
                 </div>
@@ -83,18 +82,18 @@
     </section>
 
     <section class="container-fluid bg-present" id="presentMembers">
-        <div class="h1 text-center text-light pt-3">Present Members</div>
+        <div class="h1 text-center text-dark pt-3">Present Members</div>
         <div class="container">
             <div class="row" id="presentMember">
             </div>
-            <h4 class="text-light py-3">Visitor</h4>
+            <h4 class="text-dark py-3">Visitor</h4>
             <div class="row" id="presentMemberVisitor">
             </div>
     </section>
 
 
     <section class="container-fluid bg-former" id="formerMembers">
-        <div class="h1 text-center text-light pt-3">Former Members</div>
+        <div class="h1 text-center text-dark pt-3">Former Members</div>
         <div class="container">
             <div class="row" id="formerMember">
             </div>
