--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
             <img src="recents/S.Halder_2023_june_PRA.png" class="d-block w-100" alt="Fourth Slide" />
           </div>
           <div class="carousel-item">
-            <img src="recents/fig4.png" class="d-block w-100" alt="Fourth Slide" />
+            <img src="recents/fig4.png" class="d-block w-100" alt="Fifth Slide" />
           </div>
           <div class="carousel-item">
-            <img src="recents/fig3.png" class="d-block w-100" alt="Fourth Slide" />
+            <img src="recents/fig3.png" class="d-block w-100" alt="Sixth Slide" />
           </div>
           <div class="carousel-item">
-            <img src="recents/fig1.png" class="d-block w-100" alt="Fourth Slide" />
+            <img src="recents/fig1.png" class="d-block w-100" alt="Seventh Slide" />
           </div>
         </div>
         <a class="carousel-control-prev" href="#recenthl" role="button" data-bs-slide="prev">
