--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
           <li data-bs-target="#recenthl" data-bs-slide-to="1"></li>
           <li data-bs-target="#recenthl" data-bs-slide-to="2"></li>
           <li data-bs-target="#recenthl" data-bs-slide-to="3"></li>
+          <li data-bs-target="#recenthl" data-bs-slide-to="4"></li>
+          <li data-bs-target="#recenthl" data-bs-slide-to="5"></li>
+          <li data-bs-target="#recenthl" data-bs-slide-to="6"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
