--- a/group.html
+++ b/group.html
@@ -74,6 +74,8 @@
                         <h4 class="text-dark">Sonjoy Majumder</h4>
                         <p style="color:rgb(137, 137, 137)">Professor, Physics</p>
                         <tt class="text-lg" style="color:rgb(167, 167, 167)">sonjoym@phy.iitkgp.ac.in</tt>
+                        <p style="color:rgb(0,0,0)">Prof. Sonjoy Majumder is a distinguished theoretical physicist and currently serves as a professor in the Department of Physics at the Indian Institute of Technology Kharagpur (IIT KGP). He earned his Ph.D. in Physics from the Indian Institute of Astrophysics (IIA) in Bangalore and completed postdoctoral fellowships at the Harish-Chandra Research Institute in Allahabad, the Technical University of Munich in Germany, and the Institute for Nano-Technology at FZK in Germany.
+Prof. Majumder's research interests lie in the theoretical investigation of condensed matter systems, including Bose-Einstein condensates (BECs), ultracold atoms, topological phases of matter, and quantum information processing. His numerous publications in prestigious scientific journals attest to his profound contributions to the field of theoretical physics.</p>
                     </div>
                 </div>
             </div>
