--- a/publication.html
+++ b/publication.html
@@ -42,21 +42,21 @@
     </style>
 </head>
 <body>
-    <h1>My Publications</h1>
+    <h1>Publications</h1>
 
-    <!-- Year 20XX -->
-    <div class="year">20XX</div>
+    <!-- Year 2023 -->
+    <div class="year">2023</div>
 
     <div class="publication">
-        <div class="title">Publication Title 1</div>
-        <div class="authors">Author A, Author B, Author C</div>
-        <div class="details">Additional details about the publication. <a class="doi" href="https://doi.org/your-doi-link">DOI: your-doi-link</a></div>
+        <div class="title">Rayleigh-Taylor instability in a phase-separated three-component Bose-Einstein condensate 1</div>
+        <div class="authors">Arpana Saboo, Soumyadeep Halder, Subrata Das, Sonjoy Majumder</div>
+        <div class="details">Additional details about the publication. <a class="doi" href="https://doi.org/10.1103/PhysRevA.108.013320">DOI: your-doi-link</a></div>
     </div>
 
     <div class="publication">
-        <div class="title">Publication Title 2</div>
-        <div class="authors">Author X, Author Y</div>
-        <div class="details">Additional details about the publication. <a class="doi" href="https://doi.org/your-doi-link">DOI: your-doi-link</a></div>
+        <div class="title">Benchmarking of different optimizers in the variational quantum algorithms for applications in quantum chemistry</div>
+        <div class="authors">Harshdeep Singh, Sonjoy Majumder, Sabyashachi Mishra</div>
+        <div class="details">The Journal of Chemical Physics. <a class="doi" href="https://doi.org/10.1063/5.0161057">DOI: your-doi-link</a></div>
     </div>
 
     <!-- Add more publications for year 20XX -->
