--- a/publication.html
+++ b/publication.html
@@ -50,13 +50,14 @@
     <div class="publication">
         <div class="title">Rayleigh-Taylor instability in a phase-separated three-component Bose-Einstein condensate 1</div>
         <div class="authors">Arpana Saboo, Soumyadeep Halder, Subrata Das, Sonjoy Majumder</div>
-        <div class="details">Additional details about the publication. <a class="doi" href="https://doi.org/10.1103/PhysRevA.108.013320">DOI: your-doi-link</a></div>
+        <div class="details">Physical Review A</div>
+        <div class="doi" href="https://doi.org/10.1103/PhysRevA.108.013320">DOI: 10.1103/PhysRevA.108.013320</div>
     </div>
 
     <div class="publication">
         <div class="title">Benchmarking of different optimizers in the variational quantum algorithms for applications in quantum chemistry</div>
         <div class="authors">Harshdeep Singh, Sonjoy Majumder, Sabyashachi Mishra</div>
-        <div class="details">The Journal of Chemical Physics. <a class="doi" href="https://doi.org/10.1063/5.0161057">DOI: your-doi-link</a></div>
+        <div class="details">The Journal of Chemical Physics <a class="doi" href="https://doi.org/10.1063/5.0161057">DOI: 10.1063/5.0161057</a></div>
     </div>
 
     <!-- Add more publications for year 20XX -->
