--- a/publication.html
+++ b/publication.html
@@ -51,7 +51,7 @@
         <div class="title">Rayleigh-Taylor instability in a phase-separated three-component Bose-Einstein condensate 1</div>
         <div class="authors">Arpana Saboo, Soumyadeep Halder, Subrata Das, Sonjoy Majumder</div>
         <div class="details">Physical Review A</div>
-        <div class="doi" href="https://doi.org/10.1103/PhysRevA.108.013320">DOI: 10.1103/PhysRevA.108.013320</div>
+        <a class="doi" href="https://doi.org/10.1103/PhysRevA.108.013320">DOI: 10.1103/PhysRevA.108.013320</a></div>
     </div>
 
     <div class="publication">
