--- a/publication.html
+++ b/publication.html
@@ -28,15 +28,18 @@
         .title {
             font-size: 18px;
             font-weight: bold;
+            margin-bottom: 5px;
         }
         .authors {
             font-style: italic;
             margin-bottom: 5px;
         }
         .details {
-            margin-top: 10px;
+            margin-top: 5px;
+            font-weight: bold;
         }
         .doi {
+            margin-top: 5px;
             color: #007bff;
         }
     </style>
