--- a/publication.html
+++ b/publication.html
@@ -32,6 +32,7 @@
         }
         .authors {
             font-style: italic;
+            font-weight: bold;
             margin-bottom: 5px;
         }
         .details {
@@ -51,22 +52,30 @@
     <div class="year">2023</div>
 
     <div class="publication">
-        <div class="title">Rayleigh-Taylor instability in a phase-separated three-component Bose-Einstein condensate 1</div>
+        <div class="title">Rayleigh-Taylor instability in a phase-separated three-component Bose-Einstein condensate </div>
         <div class="authors">Arpana Saboo, Soumyadeep Halder, Subrata Das, Sonjoy Majumder</div>
         <div class="details">Physical Review A</div>
-        <a class="doi" href="https://doi.org/10.1103/PhysRevA.108.013320">DOI: 10.1103/PhysRevA.108.013320</a></div>
+        <div><a class="doi" href="https://doi.org/10.1103/PhysRevA.108.013320">DOI: 10.1103/PhysRevA.108.013320</a></div>
+    </div>
+
+    <div class="publication">
+        <div class="title">Two-dimensional miscible-immiscible supersolid and droplet crystal state in a homonuclear dipolar bosonic mixture</div>
+        <div class="authors">Soumyadeep Halder, Subrata Das, Sonjoy Majumder</div>
+        <div class="details">Physical Review A</div>
+        <div><a class="doi" href="https://doi.org/10.1103/PhysRevA.107.063303">DOI: 10.1103/PhysRevA.107.063303</a></div>
     </div>
 
     <div class="publication">
         <div class="title">Benchmarking of different optimizers in the variational quantum algorithms for applications in quantum chemistry</div>
         <div class="authors">Harshdeep Singh, Sonjoy Majumder, Sabyashachi Mishra</div>
-        <div class="details">The Journal of Chemical Physics <a class="doi" href="https://doi.org/10.1063/5.0161057">DOI: 10.1063/5.0161057</a></div>
+        <div class="details">The Journal of Chemical Physics</div> 
+        <div><a class="doi" href="https://doi.org/10.1063/5.0161057">DOI: 10.1063/5.0161057</a></div>
     </div>
 
     <!-- Add more publications for year 20XX -->
 
-    <!-- Year 20YY -->
-    <div class="year">20YY</div>
+    <!-- Year 2022 -->
+    <div class="year">2022</div>
 
     <div class="publication">
         <div class="title">Publication Title 3</div>
