--- a/publication.html
+++ b/publication.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f8f8f8;
+            background-color: #e0dcdc;
             margin: 0;
             padding: 20px;
         }
