--- a/publication.html
+++ b/publication.html
@@ -11,12 +11,23 @@
             margin: 0;
             padding: 20px;
         }
-        h1 {
+        header {
+            background-color: #333;
+            color: white;
             text-align: center;
-            margin-bottom: 20px;
+            padding: 1em;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1em;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
         }
         .year {
-            font-size: 24px;
+            font-size: 25px;
             margin-top: 20px;
         }
         .publication {
@@ -26,7 +37,7 @@
             margin-bottom: 10px;
         }
         .title {
-            font-size: 18px;
+            font-size: 19px;
             font-weight: bold;
             margin-bottom: 5px;
         }
@@ -46,7 +57,9 @@
     </style>
 </head>
 <body>
-    <h1>Publications</h1>
+    <header>
+        <h1>Your Publications</h1>
+    </header>
 
     <!-- Year 2023 -->
     <div class="year">2023</div>
@@ -188,6 +201,8 @@
         
 
     <!-- Continue adding more years and publications as needed -->
-
+<footer>
+        &copy; 2023 Your Name. All rights reserved.
+    </footer>
 </body>
 </html>
