--- a/publication.html
+++ b/publication.html
@@ -58,7 +58,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Publications</h1>
+        <h1>Publications</h1>
     </header>
 
     <!-- Year 2023 -->
@@ -201,8 +201,6 @@
         
 
     <!-- Continue adding more years and publications as needed -->
-<footer>
-        &copy; 2023 Your Name. All rights reserved.
-    </footer>
+
 </body>
 </html>
