--- a/publication.html
+++ b/publication.html
@@ -48,6 +48,7 @@
         }
     </style>
 </head>
+    <link href="css/style.css" rel="stylesheet">
 <body>
     <header>
         <h1>Publications</h1>
