--- a/publication.html
+++ b/publication.html
@@ -22,9 +22,12 @@
             color: white;
             text-align: center;
             padding: 1em;
-            position: absolute;
+            position: fixed;
+            padding: 10px 10px 0px 10px;
             bottom: 0;
             width: 100%;
+            /* Height of the footer*/
+            height: 40px;
         }
         .container {
             display: flex;
