--- a/publication.html
+++ b/publication.html
@@ -22,7 +22,7 @@
             color: white;
             text-align: center;
             padding: 1em;
-            position: fixed;
+            position:  absolute;
             padding: 10px 10px 0px 10px;
             bottom: 0;
             width: 100%;
