--- a/publication.html
+++ b/publication.html
@@ -47,8 +47,29 @@
         }
     </style>
 </head>
-    <link href="css/style.css" rel="stylesheet">
+   <link href="css/style.css" rel="stylesheet">
 <body>
+<nav id="navbar_top" class="navbar navbar-expand-md bg-dark navbar-dark shadow">
+    <div class="container">
+      <a href="index.html" class="navbar-brand align-self-center">
+        <img src="assets/img/droplet.png" class="rounded-circle" height="40">
+        AMQI
+      </a>
+            </div>
+             </nav>
+               <section class="p-5 bg-intro" id="intro">
+    <div class="container">
+      <div class="h1 text-light text-center">
+        Atomic, Molecular & Quantum Information Group
+      </div>
+      <p class="h5 text-center text-light">
+        Department of Physics, Indian Institute of Technology Kharagpur
+      </p>
+      <p class="text-center text-light">
+        Welcome to the website of our theoretical group!
+      </p>
+    </div>
+  </section>
     <header>
         <h1>Publications</h1>
     </header>
