--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,12 @@ body {
   margin: 0;
   font-family: Arial;
 }
-
+header {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1em;
+        }
 /* The grid: Four equal columns that floats next to each other */
 .column {
   float: left;
