--- a/gallery.html
+++ b/gallery.html
@@ -68,11 +68,12 @@ header {
 </style>
 </head>
 <body>
-
+<header>
 <div style="text-align:center">
   <h2>Gallery</h2>
   <p>Click on the images below:</p>
 </div>
+    </header>
 
 <!-- The four columns -->
 <div class="row">
