--- a/gallery.html
+++ b/gallery.html
@@ -90,7 +90,22 @@ header {
     <img src="Gallery/sm_home_1.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
   </div>
 </div>
-
+  
+<div class="row">
+  <div class="column">
+    <img src="Gallery/subrata_japan.jpg" alt="Nature" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Gallery/soumya_conf_2.JPG" alt="Snow" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Gallery/soumya_conf_3.JPG" alt="Mountains" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Gallery/rs_day_shainee.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+  </div>
+</div>
+  
 <div class="container">
   <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
   <img id="expandedImg" style="width:100%">
