--- a/gallery.html
+++ b/gallery.html
@@ -76,24 +76,85 @@ header {
     </header>
 
 <!-- The four columns -->
+
+  <div class="row">
+  <div class="column">
+    <img src="Gallery/IIT_1.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Gallery/IIT_2.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Gallery/IIT_3.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Gallery/workshop.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+  </div>
+</div>
+
+  <div class="row">
+  <div class="column">
+    <img src="Gallery/SM_1.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Gallery/SM_2.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Gallery/SM_3.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Gallery/Anal.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+  </div>
+</div>
+
+  <div class="row">
+  <div class="column">
+    <img src="Gallery/Anal_arghya_subrata.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Gallery/Dilip_Arghya_def.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Gallery/sub_def.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Gallery/Sub_def_2.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+  </div>
+</div>
+
 <div class="row">
   <div class="column">
-    <img src="Gallery/subrata_japan.jpg" alt="Nature" style="width:100%" onclick="myFunction(this);">
+    <img src="Gallery/rohit.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="Gallery/soumya_badhonnef.jpg" alt="Snow" style="width:100%" onclick="myFunction(this);">
+    <img src="Gallery/rohit_2.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="Gallery/rsday_1.jpg" alt="Mountains" style="width:100%" onclick="myFunction(this);">
+    <img src="Gallery/RSS.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="Gallery/sm_home_1.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    <img src="Gallery/SM_group.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
   </div>
 </div>
   
 <div class="row">
   <div class="column">
-    <img src="Gallery/subrata_japan.jpg" alt="Nature" style="width:100%" onclick="myFunction(this);">
+    <img src="Gallery/sm_home_1.jpg" alt="Nature" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Gallery/subrata_japan.jpg" alt="Snow" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Gallery/soumya_badhonnef.jpg" alt="Mountains" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Gallery/rsday_1.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+  </div>
+</div>
+  
+<div class="row">
+  <div class="column">
+    <img src="Gallery/Soumya_rsday2.jpg" alt="Nature" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
     <img src="Gallery/soumya_conf_2.JPG" alt="Snow" style="width:100%" onclick="myFunction(this);">
