--- a/publication.html
+++ b/publication.html
@@ -190,6 +190,19 @@
     </div> 
      </div>
     <!-- Add more publications for year 20YY -->
+
+    <!-- Year 2019 -->
+    <div class="year">2019</div>
+        
+    <div class="publication">
+        <div class="title">Dynamic Polarizabilities and Magic Wavelengths of Sr+ for Focused Vortex Light</div>
+        <div class="authors">Anal Bhowmik, Sonjoy Majumder</div>
+        <div class="details">Quantum Collisions and Confinement of Atomic and Molecular Species, and Photons: Select Proceedings of the 7th Topical Conference of ISAMP 2018</div> 
+        <div><a class="doi" href="https://link.springer.com/chapter/10.1007/978-981-13-9969-5_4">DOI: 10.1103/10.1007/978-981-13-9969-5_4</a></div>
+    </div>
+
+
+    <!-- Add more publications for year 2019 -->
         
 
     <!-- Continue adding more years and publications as needed -->
