--- a/gallery.html
+++ b/gallery.html
@@ -94,10 +94,10 @@ header {
 
   <div class="row">
   <div class="column">
-    <img src="Gallery/SM_1.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+    <img src="Gallery/SM_1.JPG" alt="IIT" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="Gallery/SM_2.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+    <img src="Gallery/SM_2.JPG" alt="IIT" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
     <img src="Gallery/SM_3.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
@@ -130,7 +130,7 @@ header {
     <img src="Gallery/rohit_2.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="Gallery/RSS.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
+    <img src="Gallery/SSH.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
     <img src="Gallery/SM_group.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
@@ -145,10 +145,10 @@ header {
     <img src="Gallery/subrata_japan.jpg" alt="Snow" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="Gallery/soumya_badhonnef.jpg" alt="Mountains" style="width:100%" onclick="myFunction(this);">
+    <img src="Gallery/soumya_conf_2.jpg" alt="Mountains" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="Gallery/rsday_1.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    <img src="Gallery/soumya_conf_3.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
   </div>
 </div>
   
@@ -157,13 +157,13 @@ header {
     <img src="Gallery/Soumya_rsday2.jpg" alt="Nature" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="Gallery/soumya_conf_2.JPG" alt="Snow" style="width:100%" onclick="myFunction(this);">
+    <img src="Gallery/rsday_1.JPG" alt="Snow" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="Gallery/soumya_conf_3.JPG" alt="Mountains" style="width:100%" onclick="myFunction(this);">
+    <img src="Gallery/soumya_badhonnef.JPG" alt="Mountains" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="Gallery/rs_day_shainee.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    <img src="Gallery/RSS.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
   </div>
 </div>
   
