--- a/gallery.html
+++ b/gallery.html
@@ -145,10 +145,10 @@ header {
     <img src="Gallery/subrata_japan.jpg" alt="Snow" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="Gallery/soumya_conf_2.jpg" alt="Mountains" style="width:100%" onclick="myFunction(this);">
+    <img src="Gallery/soumya_conf_2.JPG" alt="Mountains" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="Gallery/soumya_conf_3.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+    <img src="Gallery/soumya_conf_3.JPG" alt="Lights" style="width:100%" onclick="myFunction(this);">
   </div>
 </div>
   
@@ -157,10 +157,10 @@ header {
     <img src="Gallery/Soumya_rsday2.jpg" alt="Nature" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="Gallery/rsday_1.JPG" alt="Snow" style="width:100%" onclick="myFunction(this);">
+    <img src="Gallery/rsday_1.jpg" alt="Snow" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="Gallery/soumya_badhonnef.JPG" alt="Mountains" style="width:100%" onclick="myFunction(this);">
+    <img src="Gallery/soumya_badhonnef.jpg" alt="Mountains" style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
     <img src="Gallery/RSS.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
