--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
               <strong><span>Atoms, Molecules & Quantum Information Group</span></strong>
             </div>
             <div class="credits">
-              Designed by <a> <strong>Subrata</strong></a><br>
+              Designed by <a> <strong>Subrata and Soumya</strong></a><br>
               <!-- <link href="assets/img/mypic.png" rel="apple-touch-icon"> -->
               <!-- <img src="assets/img/mypic.png" class="img-rounded" style="width: 70px;"> -->
             </div>
