--- a/publication.html
+++ b/publication.html
@@ -55,12 +55,26 @@
      <div class="container">
     <!-- Year 2023 -->
     <div class="year">2023</div>
+
+    <div class="publication">
+        <div class="title">Induced supersolidity in a Dy-Er mixture </div>
+        <div class="authors">Soumyadeep Halder, Subrata Das, Sonjoy Majumder</div>
+        <div class="details">Arxiv</div>
+        <div><a class="doi" href="https://doi.org/10.48550/arXiv.2309.16799">DOI: arXiv:2309.16799</a></div>
+    </div>
+         
+    <div class="publication">
+        <div class="title">On The Study Of Partial Qubit Hamiltonian For Efficient Molecular Simulation Using Variational Quantum Eigensolvers </div>
+        <div class="authors">Harshdeep Singh, Sabyashachi Mishra, Sonjoy Majumder</div>
+        <div class="details">Arxiv</div>
+        <div><a class="doi" href="https://doi.org/10.48550/arXiv.2308.12524">DOI: arXiv:2308.12524</a></div>
+    </div>
     
     <div class="publication">
         <div class="title">Quench dynamics of edge states in a finite extended Su-Schrieffer-Heeger system </div>
         <div class="authors">Anirban Ghosh, Andy M Martin, Sonjoy Majumder</div>
-        <div class="details">Arxiv (Accepted in Physical Review E)</div>
-        <div><a class="doi" href="https://doi.org/10.48550/arXiv.2303.00269">DOI: arXiv:2303.00269</a></div>
+        <div class="details">Physical Review E</div>
+        <div><a class="doi" href="https://doi.org/10.1103/PhysRevE.108.034102">DOI: 10.1103/PhysRevE.108.034102</a></div>
     </div>
 
     <div class="publication">
