--- a/publication.html
+++ b/publication.html
@@ -53,8 +53,31 @@
         <h1>Publications</h1>
     </header>
      <div class="container">
+     <!-- Year 2024 -->
+    <div class="year">2024</div>
+
+    <div class="publication">
+        <div class="title">Induced supersolidity and hypersonic flow of a dipolar Bose-Einstein Condensate in a rotating bubble trap</div>
+        <div class="authors">Hari Sadhan Ghosh, Soumyadeep Halder, Subrata Das, Sonjoy Majumder</div>
+        <div class="details">Arxiv</div> 
+        <div><a class="doi" href="https://doi.org/10.48550/arXiv.2402.13422">DOI: arXiv:2402.13422</a></div>
+    </div>
+        
+    <div class="publication">
+        <div class="title">Topological excitations in a spin-orbit coupled spin-1 Bose-Einstein condensate under sinusoidally varying magnetic fields</div>
+        <div class="authors">Arpana Saboo, Soumyadeep Halder, Subrata Das, Sonjoy Majumder</div>
+        <div class="details">Arxiv</div> 
+        <div><a class="doi" href="https://doi.org/10.48550/arXiv.2402.08118">DOI: arXiv:2402.08118</a></div>
+    </div>
     <!-- Year 2023 -->
     <div class="year">2023</div>
+
+    <div class="publication">
+        <div class="title">Hückel Molecular Orbital Theory on a Quantum Computer: A Scalable System-Agnostic Variational Implementation with Compact Encoding</div>
+        <div class="authors">Harshdeep Singh, Sonjoy Majumder, Sabyashachi Mishra</div>
+        <div class="details">Arxiv</div> 
+        <div><a class="doi" href="https://doi.org/10.48550/arXiv.2312.02020">DOI: arXiv:2312.02020</a></div>
+    </div>
 
     <div class="publication">
         <div class="title">Induced supersolidity in a Dy-Er mixture </div>
@@ -66,8 +89,8 @@
     <div class="publication">
         <div class="title">On The Study Of Partial Qubit Hamiltonian For Efficient Molecular Simulation Using Variational Quantum Eigensolvers </div>
         <div class="authors">Harshdeep Singh, Sabyashachi Mishra, Sonjoy Majumder</div>
-        <div class="details">Arxiv</div>
-        <div><a class="doi" href="https://doi.org/10.48550/arXiv.2308.12524">DOI: arXiv:2308.12524</a></div>
+        <div class="details">2023 International Conference on Quantum Technologies, Communications, Computing, Hardware and Embedded Systems Security (IEEE Xplore)</div>
+        <div><a class="doi" href="https://doi.org/10.1109/iQ-CCHESS56596.2023.10391502">DOI: 10.1109/iQ-CCHESS56596.2023.10391502</a></div>
     </div>
     
     <div class="publication">
@@ -99,10 +122,17 @@
     </div>
 
     <div class="publication">
+        <div class="title">Extracting Information from Partial Hamiltonian of Simple Molecules for Designing Efficient Variational Quantum Eigensolvers</div>
+        <div class="authors">Harshdeep Singh, Sabyashachi Mishra, Sonjoy Majumder</div>
+        <div class="details">Optica Quantum 2.0 Conference and Exhibition</div> 
+        <div><a class="doi" href="https://doi.org/10.1364/QUANTUM.2023.QTu3A.18">DOI: 10.1063/5.0161057</a></div>
+    </div>
+
+    <div class="publication">
         <div class="title">Transitional Strength under Plasma: Precise Estimations of Astrophysically Relevant Electromagnetic Transitions of Ar7+, Kr7+, Xe7+, and Rn7+ under Plasma Atmosphere</div>
         <div class="authors">Swapan Biswas, Anal Bhowmik, Arghya Das, Radha Raman Pal, Sonjoy Majumder</div>
         <div class="details">Atoms</div> 
-        <div><a class="doi" href=" https://doi.org/10.3390/atoms11060087">DOI: 10.3390/atoms11060087</a></div>
+        <div><a class="doi" href=" https://doi.org/10.3390/atoms11060087">DOI: 10.1364/QUANTUM.2023.QTu3A.18</a></div>
     </div>
 
     <!-- Add more publications for year 20XX -->
