--- a/gallery.html
+++ b/gallery.html
@@ -77,6 +77,21 @@ header {
 
 <!-- The four columns -->
 
+<div class="row">
+  <div class="column">
+    <img src="Gallery/PRL_SM_1.jpg" alt="PRL conference 2024" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Gallery/PRL_SM_2.jpg" alt="PRL conference 2024" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Gallery/PRL_SM_3.jpg" alt="PRL conference 2024" style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Gallery/PRL_SM_4.jpg" alt="PRL conference 2024" style="width:100%" onclick="myFunction(this);">
+  </div>
+</div>
+
   <div class="row">
   <div class="column">
     <img src="Gallery/IIT_1.jpg" alt="IIT" style="width:100%" onclick="myFunction(this);">
