--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <a href="publication.html" class="nav-link">Publications</a>
           </li>
           <li class="nav-item">
-            <a href="Talk.html" class="nav-link">Publications</a>
+            <a href="Talk.html" class="nav-link">Talks</a>
           </li>
           <li class="nav-item">
             <a href="gallery.html" class="nav-link">Gallery</a>
