--- a/Talk.html
+++ b/Talk.html
@@ -3,21 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Lecture</title>
+    <title>Video Lectures</title>
 </head>
 <body>
-    <h1>Video Lecture</h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/watch?v=Fj5AYFDC6Lk&t=19s" frameborder="0" allowfullscreen></iframe>
-        <p>
+    <h1>Video Lectures</h1>
+    
+    <h2>PHYSICS WITH TRAPPED ATOMS, MOLECULES AND IONS</h2>
+    <a href="https://www.youtube.com/watch?v=Fj5AYFDC6Lk" target="_blank">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Fj5AYFDC6Lk" frameborder="0" allowfullscreen></iframe>
+    </a>
+    <p>
         <strong>Lecture Place:</strong> ICTS Bengaluru<br>
         <strong>Date:</strong> May 12, 2022
     </p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/watch?v=LwYFjAra3b0&t=1379s" frameborder="0" allowfullscreen></iframe>
-    <p><strong>Lecture Place:</strong> IISER Kolkata</p>
+
+    <h2>QIQT 23</h2>
+    <a href="https://www.youtube.com/watch?v=LwYFjAra3b0" target="_blank">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/LwYFjAra3b0" frameborder="0" allowfullscreen></iframe>
+    </a>
+    <p>
+        <p><strong>Lecture Place:</strong> IISER Kolkata</p>
     <p><strong>Date:</strong> May 26, 2023</p>
+    </p>
 </body>
 </html>
-
-
-
-
