--- a/index.html
+++ b/index.html
@@ -102,25 +102,25 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="recents/A.Ghosh_2023_aug_PRE.png" class="d-block img-fluid w-100" alt="First Slide" />
+            <img src="recents/Soumya_PRA_2024.jpeg" class="d-block img-fluid w-100" alt="First Slide" />
+          </div>
+          <div class="carousel-item active">
+            <img src="recents/Harshdeep_JCP_2024.jpeg" class="d-block img-fluid w-100" alt="Second Slide" />
+          </div>
+          <div class="carousel-item active">
+            <img src="recents/A.Ghosh_2023_aug_PRE.png" class="d-block img-fluid w-100" alt="Third Slide" />
           </div>
           <div class="carousel-item">
-            <img src="recents/H.Singh_2023_j.chem.phys.png" class="d-block w-100" alt="Second Slide" />
+            <img src="recents/H.Singh_2023_j.chem.phys.png" class="d-block w-100" alt="Fourth Slide" />
           </div>
           <div class="carousel-item">
-            <img src="recents/A.Saboo_2023_july_PRA.png" class="d-block w-100" alt="Third Slide" />
+            <img src="recents/A.Saboo_2023_july_PRA.png" class="d-block w-100" alt="Fifth Slide" />
           </div>
           <div class="carousel-item">
-            <img src="recents/S.Halder_2023_june_PRA.png" class="d-block w-100" alt="Fourth Slide" />
+            <img src="recents/S.Halder_2023_june_PRA.png" class="d-block w-100" alt="Sixth Slide" />
           </div>
           <div class="carousel-item">
-            <img src="recents/fig4.png" class="d-block w-100" alt="Fifth Slide" />
-          </div>
-          <div class="carousel-item">
-            <img src="recents/fig3.png" class="d-block w-100" alt="Sixth Slide" />
-          </div>
-          <div class="carousel-item">
-            <img src="recents/fig1.png" class="d-block w-100" alt="Seventh Slide" />
+            <img src="recents/fig4.png" class="d-block w-100" alt="Seventh Slide" />
           </div>
         </div>
         <a class="carousel-control-prev" href="#recenthl" role="button" data-bs-slide="prev">
