--- a/publication.html
+++ b/publication.html
@@ -57,6 +57,13 @@
     <div class="year">2024</div>
 
     <div class="publication">
+        <div class="title">Hückel Molecular Orbital Theory on a Quantum Computer: A Scalable System-Agnostic Variational Implementation with Compact Encoding</div>
+        <div class="authors">Harshdeep Singh, Sonjoy Majumder, Sabyashachi Mishra</div>
+        <div class="details">The Journal of Chemical Physics</div> 
+        <div><a class="doi" href="https://doi.org/10.1063/5.0210597">DOI: 10.1063/5.0210597</a></div>
+    </div>
+
+    <div class="publication">
         <div class="title">Induced supersolidity and hypersonic flow of a dipolar Bose-Einstein Condensate in a rotating bubble trap</div>
         <div class="authors">Hari Sadhan Ghosh, Soumyadeep Halder, Subrata Das, Sonjoy Majumder</div>
         <div class="details">Arxiv</div> 
@@ -71,13 +78,6 @@
     </div>
     <!-- Year 2023 -->
     <div class="year">2023</div>
-
-    <div class="publication">
-        <div class="title">Hückel Molecular Orbital Theory on a Quantum Computer: A Scalable System-Agnostic Variational Implementation with Compact Encoding</div>
-        <div class="authors">Harshdeep Singh, Sonjoy Majumder, Sabyashachi Mishra</div>
-        <div class="details">Arxiv</div> 
-        <div><a class="doi" href="https://doi.org/10.48550/arXiv.2312.02020">DOI: arXiv:2312.02020</a></div>
-    </div>
 
     <div class="publication">
         <div class="title">Induced supersolidity in a Dy-Er mixture </div>
