--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
           <div class="carousel-item active">
             <img src="recents/Soumya_PRA_2024.jpeg" class="d-block img-fluid w-100" alt="First Slide" />
           </div>
-          <div class="carousel-item active">
+          <div class="carousel-item">
             <img src="recents/Harshdeep_JCP_2024.jpeg" class="d-block img-fluid w-100" alt="Second Slide" />
           </div>
-          <div class="carousel-item active">
+          <div class="carousel-item">
             <img src="recents/A.Ghosh_2023_aug_PRE.png" class="d-block img-fluid w-100" alt="Third Slide" />
           </div>
           <div class="carousel-item">
