--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <img src="recents/Soumya_PRA_2024.jpeg" class="d-block img-fluid w-100" alt="First Slide" />
           </div>
           <div class="carousel-item">
-            <img src="recents/Harshdeep_JCP_2024.jpeg" class="d-block img-fluid w-100" alt="Second Slide" />
+            <img src="recents/Harshdeep_JCP_2024.png" class="d-block img-fluid w-100" alt="Second Slide" />
           </div>
           <div class="carousel-item">
             <img src="recents/A.Ghosh_2023_aug_PRE.png" class="d-block img-fluid w-100" alt="Third Slide" />
