--- a/Talk.html
+++ b/Talk.html
@@ -6,7 +6,7 @@
     <title>Video Lectures</title>
 </head>
 <body>
-    <h1>Video Lectures</h1>
+    <h1>Talks</h1>
     
     <h2>PHYSICS WITH TRAPPED ATOMS, MOLECULES AND IONS</h2>
     <a href="https://www.youtube.com/watch?v=Fj5AYFDC6Lk" target="_blank">
