--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   </section>
 
   <section class="p-2 bg-intro-topics">
-    <div class="container">
+    <div class="container"style="background-color: #f0f0f0;">
       <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-dark">Ultracold Atom</h3>
