--- a/index.html
+++ b/index.html
@@ -136,12 +136,13 @@
   </section>
 
   <section class="p-2 bg-intro-topics">
-    <div class="container"style="background-color: #f0f0f0;">
+<!--     <div class="container"style="background-color: #f0f0f0;"> -->
+    <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-dark">Ultracold Atom</h3>
           <!-- <img src="recents/Physics.png" class="rounded-circle img-fluid w-25" alt="..."> -->
-          <p class="text-dark p-2 topics-info mt-1">Bose-Einstein condensates (BEC), Dipolar BEC, Quantum Droplets and
+          <p class="text-dark p-2 topics-info mt-1"style="background-color: #f0f0f0; padding: 10px; border-radius: 5px;">Bose-Einstein condensates (BEC), Dipolar BEC, Quantum Droplets and
             Supersolids,
             Multicomponent BEC, Spinor BEC, Instibility & Quantum Turbulence</p>
         </div>
