--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <p class="text-dark p-2 topics-info mt-1"style="background-color: #ffffff; padding: 10px; border-radius: 8px;">Topological phases of simple lattice models, Topological
             non-equillibrium dynamics, Non
             Hermitian PT-symmetry, First principal calculation in strongly
-            correlated system, DFT</p>
+            correlated system</p>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4 text-center pt-3 px-2">
           <h3 class="text-dark">Quantum Algorithm</h3>
