--- a/group.html
+++ b/group.html
@@ -36,7 +36,11 @@
 <body>
     <nav id="navbar_top" class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top shadow">
         <div class="container">
-            <a href="index.html" class="navbar-brand">AMQI</a>
+<!--             <a href="index.html" class="navbar-brand">AMQI</a> -->
+            <a href="index.html" class="navbar-brand align-self-center">
+        <img src="assets/img/droplet.png" class="rounded-circle" height="40">
+        AMQI
+      </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
