--- a/group.html
+++ b/group.html
@@ -49,6 +49,9 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item active">
+                    <a href="#home" class="nav-link">Home</a>
+                  </li>
+                    <li class="nav-item">
                         <a href="#groupHead" class="nav-link">Group Head</a>
                     </li>
                     <li class="nav-item">
@@ -60,6 +63,18 @@
                     <li class="nav-item">
                         <a href="#projectStudents" class="nav-link">Project Studuents</a>
                     </li>
+                  <li class="nav-item">
+                    <a href="publication.html" class="nav-link">Publications</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="Talk.html" class="nav-link">Talks</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="gallery.html" class="nav-link">Gallery</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="http://10.33.1.110/nextcloud" class="nav-link">Cloud</a>
+                  </li>
 
                 </ul>
             </div>
