--- a/group.html
+++ b/group.html
@@ -81,6 +81,20 @@
         </div>
     </nav>
 
+      <section class="p-5 bg-intro" id="intro">
+        <div class="container">
+          <div class="h1 text-light text-center">
+            Atomic, Molecular & Quantum Information Group
+          </div>
+          <p class="h5 text-center text-light">
+            Department of Physics, Indian Institute of Technology Kharagpur
+          </p>
+          <p class="text-center text-light">
+            Welcome to the website of our theoretical group!
+          </p>
+        </div>
+      </section>
+
     <section class="p-5 text-center text-sm-start bg-present" id="groupHead">
         <div class="h1 text-center text-dark p-3">Group Head</div>
         <div class="container">
