--- a/group.html
+++ b/group.html
@@ -81,7 +81,7 @@
         </div>
     </nav>
 
-      <section class="p-5 bg-intro" id="intro">
+      <section class="p-5 bg-intro" id="intro" style="padding-top: 20px;">
         <div class="container">
           <div class="h1 text-light text-center">
             Atomic, Molecular & Quantum Information Group
