--- a/group.html
+++ b/group.html
@@ -80,8 +80,8 @@
             </div>
         </div>
     </nav>
-
-      <section class="p-5 bg-intro" id="intro" style="padding-top: 500px;">
+<div style="height: 20px;"></div>
+      <section class="p-5 bg-intro" id="intro">
         <div class="container">
           <div class="h1 text-light text-center">
             Atomic, Molecular & Quantum Information Group
