--- a/group.html
+++ b/group.html
@@ -89,8 +89,9 @@
           <p class="h5 text-center text-light">
             Department of Physics, Indian Institute of Technology Kharagpur
           </p>
-          <p class="text-center text-light">
-            Welcome to the website of our theoretical group!
+            <div style="height: 20px;"></div>
+          <p class="h1 text-center text-light">
+            Group Members
           </p>
         </div>
       </section>
