--- a/group.html
+++ b/group.html
@@ -51,7 +51,7 @@
                     <li class="nav-item active">
                     <a href="index.html" class="nav-link">Home</a>
                   </li>
-                    <li class="nav-item">
+<!--                     <li class="nav-item">
                         <a href="#groupHead" class="nav-link">Group Head</a>
                     </li>
                     <li class="nav-item">
@@ -62,7 +62,10 @@
                     </li>
                     <li class="nav-item">
                         <a href="#projectStudents" class="nav-link">Project Studuents</a>
-                    </li>
+                    </li> -->
+                    <li class="nav-item">
+                    <a href="group.html" class="nav-link">Group Members</a>
+                  </li>
                   <li class="nav-item">
                     <a href="publication.html" class="nav-link">Publications</a>
                   </li>
