--- a/gallery.html
+++ b/gallery.html
@@ -108,10 +108,7 @@ header {
       <div class="collapse navbar-collapse" id="navmenu">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item active">
-            <a href="#home" class="nav-link">Home</a>
-          </li>
-          <li class="nav-item">
-            <a href="#recent" class="nav-link">Recent Updates</a>
+            <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
             <a href="group.html" class="nav-link">Group Members</a>
