--- a/gallery.html
+++ b/gallery.html
@@ -129,6 +129,21 @@ header {
       </div>
     </div>
   </nav>
+  <div style="height: 50px;"></div>
+      <section class="p-5 bg-intro" id="intro">
+        <div class="container">
+          <div class="h1 text-light text-center">
+            Atomic, Molecular & Quantum Information Group
+          </div>
+          <p class="h5 text-center text-light">
+            Department of Physics, Indian Institute of Technology Kharagpur
+          </p>
+            <div style="height: 20px;"></div>
+          <p class="h1 text-center text-light">
+            Gallery
+          </p>
+        </div>
+      </section>
 <!-- <header>
 <div style="text-align:center">
   <h2>Gallery</h2>
