--- a/gallery.html
+++ b/gallery.html
@@ -129,7 +129,7 @@ header {
       </div>
     </div>
   </nav>
-  <div style="height: 50px;"></div>
+<!--   <div style="height: 50px;"></div> -->
       <section class="p-5 bg-intro" id="intro">
         <div class="container">
           <div class="h1 text-light text-center">
