--- a/gallery.html
+++ b/gallery.html
@@ -32,10 +32,10 @@
   box-sizing: border-box;
 }
 
-body {
+/* body {
   margin: 0;
   font-family: Arial;
-}
+} */
 /* header {
             background-color: #333;
             color: white;
