--- a/gallery.html
+++ b/gallery.html
@@ -32,16 +32,16 @@
   box-sizing: border-box;
 }
 
-/* body {
+body {
   margin: 0;
   font-family: Arial;
-} */
-/* header {
+} 
+ header {
             background-color: #333;
             color: white;
             text-align: center;
             padding: 1em;
-        } */
+        }
 /* The grid: Four equal columns that floats next to each other */
 .column {
   float: left;
@@ -129,26 +129,12 @@
       </div>
     </div>
   </nav>
-<!--   <div style="height: 50px;"></div> -->
-      <section class="p-5 bg-intro" id="intro">
-        <div class="container">
-          <div class="h1 text-light text-center">
-            Atomic, Molecular & Quantum Information Group
-          </div>
-          <p class="h5 text-center text-light">
-            Department of Physics, Indian Institute of Technology Kharagpur
-          </p>
-            <div style="height: 20px;"></div>
-          <p class="h1 text-center text-light">
-            Gallery
-          </p>
-        </div>
-      </section>
-<!-- <header>
+
+<header>
 <div style="text-align:center">
   <h2>Gallery</h2>
 </div>
-    </header> -->
+    </header>
 
 <!-- The four columns -->
 
